@@ -1,5 +1,6 @@
-; $Id: block.info,v 1.3 2006/11/21 20:55:33 dries Exp $
+; $Id: block.info,v 1.4 2007/06/08 05:50:53 dries Exp $
 name = Block
 description = Controls the boxes that are displayed around the main content.
 package = Core - required
 version = VERSION
+core = 6.x
