@@ -1,5 +1,6 @@
-; $Id: blogapi.info,v 1.3 2006/11/21 20:55:33 dries Exp $
+; $Id: blogapi.info,v 1.4 2007/06/08 05:50:53 dries Exp $
 name = Blog API
 description = Allows users to post content using applications that support XML-RPC blog APIs.
 package = Core - optional
 version = VERSION
+core = 6.x
