@@ -1,5 +1,6 @@
-; $Id: color.info,v 1.2 2006/11/21 20:55:34 dries Exp $
+; $Id: color.info,v 1.3 2007/06/08 05:50:54 dries Exp $
 name = Color
 description = Allows the user to change the color scheme of certain themes.
 package = Core - optional
 version = VERSION
+core = 6.x
