@@ -1,5 +1,6 @@
-; $Id: filter.info,v 1.3 2006/11/21 20:55:34 dries Exp $
+; $Id: filter.info,v 1.4 2007/06/08 05:50:54 dries Exp $
 name = Filter
 description = Handles the filtering of content in preparation for display.
 package = Core - required
 version = VERSION
+core = 6.x
