@@ -1,5 +1,6 @@
-; $Id: menu.info,v 1.3 2006/11/21 20:55:34 dries Exp $
+; $Id: menu.info,v 1.4 2007/06/08 05:50:55 dries Exp $
 name = Menu
 description = Allows administrators to customize the site navigation menu.
 package = Core - optional
 version = VERSION
+core = 6.x
