@@ -1,5 +1,6 @@
-; $Id: path.info,v 1.3 2006/11/21 20:55:34 dries Exp $
+; $Id: path.info,v 1.4 2007/06/08 05:50:55 dries Exp $
 name = Path
 description = Allows users to rename URLs.
 package = Core - optional
 version = VERSION
+core = 6.x
