@@ -1,5 +1,6 @@
-; $Id: poll.info,v 1.3 2006/11/21 20:55:35 dries Exp $
+; $Id: poll.info,v 1.4 2007/06/08 05:50:55 dries Exp $
 name = Poll
 description = Allows your site to capture votes on different topics in the form of multiple choice questions.
 package = Core - optional
 version = VERSION
+core = 6.x
