@@ -1,5 +1,6 @@
-; $Id: search.info,v 1.3 2006/11/21 20:55:35 dries Exp $
+; $Id: search.info,v 1.4 2007/06/08 05:50:55 dries Exp $
 name = Search
 description = Enables site-wide keyword searching.
 package = Core - optional
 version = VERSION
+core = 6.x
