@@ -1,5 +1,6 @@
-; $Id: user.info,v 1.3 2006/11/21 20:55:36 dries Exp $
+; $Id: user.info,v 1.4 2007/06/08 05:50:57 dries Exp $
 name = User
 description = Manages the user registration and login system.
 package = Core - required
 version = VERSION
+core = 6.x
