@@ -1,4 +1,4 @@
-; $Id: chameleon.info,v 1.2 2007/04/20 08:44:01 dries Exp $
+; $Id: chameleon.info,v 1.3 2007/06/08 05:50:57 dries Exp $
 name = Chameleon
 description = Minimalist tabled theme with light colors.
 regions[left] = Left sidebar
@@ -8,3 +8,4 @@ features[] = favicon
 features[] = name
 features[] = slogan
 version = VERSION
+core = 6.x
