@@ -1,5 +1,6 @@
-; $Id: minnelli.info,v 1.3 2007/05/06 05:47:52 dries Exp $
+; $Id: minnelli.info,v 1.4 2007/06/08 05:50:57 dries Exp $
 name = Minnelli
 description = Tableless, recolorable, multi-column, fixed width theme.
 version = VERSION
+core = 6.x
 base theme = garland
