@@ -1,5 +1,6 @@
-; $Id: pushbutton.info,v 1.3 2007/05/06 05:47:52 dries Exp $
+; $Id: pushbutton.info,v 1.4 2007/06/08 05:50:58 dries Exp $
 name = Pushbutton
 description = Tabled, multi-column theme in blue and orange tones.
 version = VERSION
+core = 6.x
 engine = phptemplate
